# midi-pedal

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  ci.sh  memory.x
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: main.rs  midi.rs
